# blackpill_baremetal

./: .gitmodules  CMakeLists.txt  STM32F411CEUX_FLASH.ld  build_debug.sh  build_release.sh
Core/: CMakeLists.txt
Core/includes/: main.h
Core/src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32_SDK/: CMakeLists.txt
Sources/: CMakeLists.txt  main.c
